--- a/app/src/main/res/menu/bottombar_menu.xml
+++ b/app/src/main/res/menu/bottombar_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     >
-    <item android:id="@+id/bottom_note"
+    <item android:id="@+id/bottomNote"
         android:icon="@drawable/ic_note"
         android:title="Note" />
 
-    <item android:id="@+id/bottom_checkList"
+    <item android:id="@+id/bottomTask"
         android:icon="@drawable/ic_check_list"
         android:title="Task"
         />
