--- a/app/src/main/res/layout/fragment_add_note_screen.xml
+++ b/app/src/main/res/layout/fragment_add_note_screen.xml
@@ -39,14 +39,15 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:maxLines="1"
+                android:layout_marginStart="10dp"
                 android:textSize="20sp"
+                android:hint="Write your title here"
                 android:textStyle="bold"
                 app:textColor="?android:attr/textColorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/addNote_btn_menu"
                 app:layout_constraintStart_toEndOf="@+id/addNote_btn_back"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Title" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/addNote_btn_menu"
@@ -82,8 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add_note_app_bar"
-        app:textColor="?android:attr/textColorPrimary"
-        tools:text="@tools:sample/lorem[20]" />
+        app:textColor="?android:attr/textColorPrimary" />
 
     <org.wordpress.aztec.toolbar.AztecToolbar
         android:id="@+id/formatting_toolbar"
