--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -16,11 +16,11 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/noteText"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textSize="22sp"
-        tools:text="@string/androidx_startup" />
+        android:text="@string/androidx_startup" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
