added TagsDaoFuns, TagsRepository, TagsUseCase, TagsViewModel, TagsRecycle, TagsAdapter

--- a/app/src/main/res/layout/fragment_page_note.xml
+++ b/app/src/main/res/layout/fragment_page_note.xml
@@ -14,7 +14,6 @@
         android:focusable="true"
         app:closeIcon="@drawable/ic_close"
         app:iconifiedByDefault="false"
-        app:layout_constraintBottom_toTopOf="@+id/note_recyclerview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +21,16 @@
         app:queryHint="Search"
         app:searchIcon="@drawable/ic_search"
         app:showDividers="middle" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tag_recycle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/tag_layout"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/searchView"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/note_recyclerview"
@@ -32,5 +41,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/tag_recycle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
