--- a/app/src/main/res/layout/fragment_page_note.xml
+++ b/app/src/main/res/layout/fragment_page_note.xml
@@ -36,7 +36,7 @@
         android:id="@+id/note_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_note"
+        tools:listitem="@layout/note_item"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
