--- a/app/src/main/res/layout/fragment_add_task_screen.xml
+++ b/app/src/main/res/layout/fragment_add_task_screen.xml
@@ -6,14 +6,135 @@
     android:layout_height="match_parent"
     tools:context=".presentation.ui.screens.AddTaskScreen">
 
-    <TextView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/add_task_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:actionBarSize"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/addTask_btn_back"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="?android:selectableItemBackground"
+                android:padding="12dp"
+                android:src="@drawable/ic_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/black"
+                tools:ignore="ContentDescription" />
+
+            <EditText
+                android:id="@+id/addTaskTitle"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:gravity="center_vertical"
+                android:hint="Write title..."
+                android:maxLines="1"
+                android:inputType="textCapSentences"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/more_menu"
+                app:layout_constraintStart_toEndOf="@+id/addTask_btn_back"
+                app:layout_constraintTop_toTopOf="parent"
+                app:textColor="@color/black"
+                />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/more_menu"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="?android:selectableItemBackground"
+                android:imeOptions="flagNoExtractUi"
+                android:inputType="textNoSuggestions|textMultiLine"
+                android:padding="12dp"
+                android:src="@drawable/ic_more"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/black"
+                tools:ignore="ContentDescription" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/task_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:listitem="@layout/item_task"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/add_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_task_app_bar" />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/saveTaskBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Task"
-        android:textSize="36sp"
+        android:backgroundTint="@color/white"
+        app:tint="#3868FB"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"
+        app:layout_constraintBottom_toTopOf="@id/add_container"
+        android:src="@drawable/ic_save"/>
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/add_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/add"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_width="wrap_content"
+            android:foreground="?android:selectableItemBackground"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_plus"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:background="@null"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/taskText"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_vertical"
+                android:padding="6dp"
+                android:textSize="22sp"
+                android:text="add more" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
