--- a/app/src/main/res/layout/fragment_page_task.xml
+++ b/app/src/main/res/layout/fragment_page_task.xml
@@ -26,7 +26,7 @@
         android:id="@+id/task_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_task"
+        tools:listitem="@layout/note_item"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
