--- a/app/src/main/res/layout/fragment_add_task_screen.xml
+++ b/app/src/main/res/layout/fragment_add_task_screen.xml
@@ -43,6 +43,7 @@
                 android:maxLines="1"
                 android:inputType="textCapSentences"
                 android:textSize="20sp"
+                android:fontFamily="@font/merriweather_regular"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/more_menu"
@@ -74,12 +75,13 @@
         android:id="@+id/task_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_task"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/add_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_task_app_bar" />
+        app:layout_constraintTop_toBottomOf="@+id/add_task_app_bar"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_task" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -100,6 +102,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:padding="4dp"
+        app:layout_constraintTop_toBottomOf="@id/task_recyclerview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,8 +114,8 @@
             android:focusable="true"
             android:layout_width="wrap_content"
             android:foreground="?android:selectableItemBackground"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -125,10 +128,10 @@
                 android:id="@+id/taskText"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:fontFamily="sans-serif-medium"
                 android:gravity="center_vertical"
                 android:padding="6dp"
-                android:textSize="22sp"
+                android:fontFamily="@font/merriweather_regular"
+                android:textSize="18sp"
                 android:text="add more" />
 
 
