--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -26,11 +26,12 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButton"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="72dp"
-        android:backgroundTint="@color/purple_500"
+        app:tint="#3868FB"
+        android:backgroundTint="@color/white"
         android:src="@drawable/ic_plus" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
