--- a/app/src/main/res/layout/fragment_page_note.xml
+++ b/app/src/main/res/layout/fragment_page_note.xml
@@ -5,15 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:background="@color/colorBackground"
     tools:context=".presentation.ui.pager.NotePage">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:focusable="true"
-        app:closeIcon="@drawable/ic_close"
         app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,18 @@
         app:searchIcon="@drawable/ic_search"
         app:showDividers="middle" />
 
+    <TextView
+        android:id="@+id/filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Filter:"
+        android:fontFamily="@font/merriweather_regular"
+        android:textSize="22dp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tag_recycle"
         android:layout_width="match_parent"
@@ -30,7 +43,26 @@
         tools:listitem="@layout/tag_layout"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:layout_constraintTop_toBottomOf="@id/filter"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        app:layout_constraintTop_toBottomOf="@id/tag_recycle"
+        android:background="@color/grey"/>
+
+    <TextView
+        android:id="@+id/notes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Notes:"
+        android:fontFamily="@font/merriweather_regular"
+        android:textSize="22dp"
+        android:textColor="@color/black"
+        android:layout_marginTop="6dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tag_recycle"
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -42,5 +74,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tag_recycle" />
+        app:layout_constraintTop_toBottomOf="@+id/notes" />
 </androidx.constraintlayout.widget.ConstraintLayout>
