--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -12,6 +12,8 @@
         android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
         android:src="@drawable/notepad"
         android:layout_height="match_parent"/>
 
@@ -19,8 +21,11 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:text="@string/app_name"
-        android:textSize="22sp"
-        android:gravity="center"
+        android:fontFamily="@font/merriweather_regular"
+        android:textSize="18sp"
+        android:singleLine="true"
+        android:padding="6dp"
+        android:gravity="center_vertical"
         android:layout_height="match_parent"
         android:layout_weight="5"
         />
