--- a/app/src/main/res/layout/tag_layout.xml
+++ b/app/src/main/res/layout/tag_layout.xml
@@ -15,8 +15,7 @@
         android:foreground="?selectableItemBackground"
         android:layout_width="wrap_content"
         android:text="android"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
+        android:fontFamily="@font/merriweather_regular"
         android:textSize="16sp"
         android:layout_height="wrap_content">
 
