launcher and app name added, final

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="kulrang">#616161</color>
     <color name="grey">#9C9C9C</color>
-    <color name="colorBackground">#F3EFEF</color>
+    <color name="colorBackground">#EDF3FF</color>
     <color name="tag_backgr">#E8E8E8</color>
 
 </resources>
