--- a/app/src/main/res/layout/fragment_add_task_screen.xml
+++ b/app/src/main/res/layout/fragment_add_task_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".presentation.ui.screens.AddTaskScreen">
 
     <com.google.android.material.appbar.AppBarLayout
